[package]
name = "actix-web-reqwest-example"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
reqwest = "*"
futures = "*"
log = "*"
env_logger = "*"
failure = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde-xml-rs = "*"
