[package]
name = "niconico-ranking"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.*"
reqwest = "0.9.15"
log = "0.4"
env_logger = "0.6.*"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde-xml-rs = "0.*"

[dependencies.urlencoded]
version = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
