[package]
name = "rust-cassandra-example"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"

[dependencies]
cdrs = "*"
tide = "*"
http-types = "*"
async-std = { version = "*", features = ["attributes"] }
env_logger = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
async-trait = "*"
