[package]
name = "rust-dynamodb-example"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
log = "*"
env_logger = "*"
rusoto_core = {version = "*", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "*", default_features = false, features=["rustls"]}
actix-web = "*"
actix-rt = "*"
http-types = "*"
