[package]
name = "rust_mongodb"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"

[dependencies]
tide = "*"
async-std = { version = "*", features = ["attributes"] }
dotenv = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
env_logger = "*"
log = "*"
percent-encoding = "*"
futures = { version = "*", default-features = false }

[dependencies.mongodb]
version = "3.0.0"
default-features = false
features = ["async-std-runtime"]

[dependencies.urlencoded]
version = "*"
