[package]
name = "rust_mongodb"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2021"

[dependencies]
tide = "*"
async-std = { version = "*", features = ["attributes"] }
dotenv = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
env_logger = "*"
log = "*"
percent-encoding = "*"
futures = { version = "*", default-features = false }

[dependencies.urlencoded]
version = "*"
