[package]
name = "rust-iron-example"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"

[dependencies]
iron = "*"
router = "*"
diesel = { version = "*", features = ["postgres"] }
dotenv = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
env_logger = "*"
persistent = "*"

[dependencies.urlencoded]
version = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[dependencies.logger]
git = "https://github.com/iron/logger.git"
